--- a/sign_in.html
+++ b/sign_in.html
@@ -33,7 +33,8 @@
       </form>
       <hr>
       <div id="buttom">
-        <p>Sign in to your account and continue reading.</p>
+        <p>Sign in to your account and continue reading.
+Have a  nice time exploring this website.</p>
       </div>
     </div>
   </body>
